--- a/main.css
+++ b/main.css
@@ -13,11 +13,12 @@ button {
     border-radius: 10px;
     padding: 10px;
     width: 100%;
+    min-height: 200px;
     font-weight: 700;
+    font-size: 2em;
 }
 
 div {
-    background-color: whitesmoke;
     color: black;
     padding: 10px;
     margin-top: 10px;    
@@ -33,15 +34,12 @@ div {
 
 #option1, #option2, #option3 {
     font-weight: 100;
-    background: darkcyan;
-    color: wheat;
+    background: darkblue;
+    color: white;
     height: 20%;
 }
 
 @media screen and (min-width: 361px) {
-    body {
-        background: rgba(0,255,0,0.25);
-    }
 
     button {
         margin: auto;
